src/api/java5/jna-dds/src/main/java/org/eclipse/cyclonedds/ddsc/DdscLibrary.java

	/**
	 * @brief Sets the trigger_value associated with a waitset.<br>
	 * When the waitset is attached to itself and the trigger value is<br>
	 * set to 'true', then the waitset will wake up just like with an<br>
	 * other status change of the attached entities.<br>
	 * This can be used to forcefully wake up a waitset, for instance<br>
	 * when the application wants to shut down. So, when the trigger<br>
	 * value is true, the waitset will wake up or not wait at all.<br>
	 * The trigger value will remain true until the application sets it<br>
	 * false again deliberately.<br>
	 * @param[in]  waitset  The waitset to set the trigger value on.<br>
	 * @param[in]  trigger  The trigger value to set.<br>
	 * @returns   0 - Success (entity attached).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The given waitset is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The waitset has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_waitset_set_trigger(dds_entity_t, bool)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1244</i>
	 */
	public static native DdscLibrary.dds_return_t dds_waitset_set_trigger(DdscLibrary.dds_entity_t waitset, byte trigger);
	/**
	 * @brief This operation allows an application thread to wait for the a status<br>
	 *        change or other trigger on (one of) the entities that are attached to<br>
	 *        the WaitSet.<br>
	 * The "dds_waitset_wait" operation blocks until the some of the attached<br>
	 * entities have triggered or "reltimeout" has elapsed.<br>
	 * 'Triggered' (dds_triggered()) doesn't mean the same for every entity:<br>
	 *  - Reader/Writer/Publisher/Subscriber/Topic/Participant<br>
	 *      - These are triggered when their status changed.<br>
	 *  - WaitSet<br>
	 *      - Triggered when trigger value was set to true by the application.<br>
	 *        It stays triggered until application sets the trigger value to<br>
	 *        false (dds_waitset_set_trigger()). This can be used to wake up an<br>
	 *        waitset for different reasons (f.i. termination) than the 'normal'<br>
	 *        status change (like new data).<br>
	 *  - ReadCondition/QueryCondition<br>
	 *      - Triggered when data is available on the related Reader that matches<br>
	 *        the Condition.<br>
	 * This functions takes a pre-allocated list to put the "xs" blobs in (that<br>
	 * were provided during the attach of the related entities) and will return<br>
	 * the number of triggered entities. It is possible that the given size<br>
	 * of the list is not the same as the number of triggered entities. If less<br>
	 * entities were triggered, then the last few entries in the list are<br>
	 * untouched. When more entities are triggered, then only 'size' number of<br>
	 * entries are inserted into the list, but still the complete count of the<br>
	 * triggered entities is returned. Which "xs" blobs are returned in the<br>
	 * latter case is undefined.<br>
	 * In case of a time out, the return value is 0.<br>
	 * Deleting the waitset while the application is blocked results in an<br>
	 * error code (i.e. < 0) returned by "wait".<br>
	 * Multiple threads may block on a single waitset at the same time;<br>
	 * the calls are entirely independent.<br>
	 * An empty waitset never triggers (i.e., dds_waitset_wait on an empty<br>
	 * waitset is essentially equivalent to a sleep).<br>
	 * The "dds_waitset_wait_until" operation is the same as the<br>
	 * "dds_waitset_wait" except that it takes an absolute timeout.<br>
	 * @param[in]  waitset    The waitset to set the trigger value on.<br>
	 * @param[out] xs         Pre-allocated list to store the 'blobs' that were<br>
	 *                        provided during the attach of the triggered entities.<br>
	 * @param[in]  nxs        The size of the pre-allocated blobs list.<br>
	 * @param[in]  reltimeout Relative timeout<br>
	 * @returns  >0 - Success (number of entities triggered).<br>
	 * @returns   0 - Time out (no entities were triggered).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The given waitset is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The waitset has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_waitset_wait(dds_entity_t, dds_attach_t*, size_t, dds_duration_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1299</i>
	 */
	public static native DdscLibrary.dds_return_t dds_waitset_wait(DdscLibrary.dds_entity_t waitset, PointerByReference xs, NativeSize nxs, DdscLibrary.dds_duration_t reltimeout);
	/**
	 * @brief This operation allows an application thread to wait for the a status<br>
	 *        change or other trigger on (one of) the entities that are attached to<br>
	 *        the WaitSet.<br>
	 * The "dds_waitset_wait" operation blocks until the some of the attached<br>
	 * entities have triggered or "abstimeout" has been reached.<br>
	 * 'Triggered' (dds_triggered()) doesn't mean the same for every entity:<br>
	 *  - Reader/Writer/Publisher/Subscriber/Topic/Participant<br>
	 *      - These are triggered when their status changed.<br>
	 *  - WaitSet<br>
	 *      - Triggered when trigger value was set to true by the application.<br>
	 *        It stays triggered until application sets the trigger value to<br>
	 *        false (dds_waitset_set_trigger()). This can be used to wake up an<br>
	 *        waitset for different reasons (f.i. termination) than the 'normal'<br>
	 *        status change (like new data).<br>
	 *  - ReadCondition/QueryCondition<br>
	 *      - Triggered when data is available on the related Reader that matches<br>
	 *        the Condition.<br>
	 * This functions takes a pre-allocated list to put the "xs" blobs in (that<br>
	 * were provided during the attach of the related entities) and will return<br>
	 * the number of triggered entities. It is possible that the given size<br>
	 * of the list is not the same as the number of triggered entities. If less<br>
	 * entities were triggered, then the last few entries in the list are<br>
	 * untouched. When more entities are triggered, then only 'size' number of<br>
	 * entries are inserted into the list, but still the complete count of the<br>
	 * triggered entities is returned. Which "xs" blobs are returned in the<br>
	 * latter case is undefined.<br>
	 * In case of a time out, the return value is 0.<br>
	 * Deleting the waitset while the application is blocked results in an<br>
	 * error code (i.e. < 0) returned by "wait".<br>
	 * Multiple threads may block on a single waitset at the same time;<br>
	 * the calls are entirely independent.<br>
	 * An empty waitset never triggers (i.e., dds_waitset_wait on an empty<br>
	 * waitset is essentially equivalent to a sleep).<br>
	 * The "dds_waitset_wait" operation is the same as the<br>
	 * "dds_waitset_wait_until" except that it takes an relative timeout.<br>
	 * The "dds_waitset_wait" operation is the same as the "dds_wait"<br>
	 * except that it takes an absolute timeout.<br>
	 * @param[in]  waitset    The waitset to set the trigger value on.<br>
	 * @param[out] xs         Pre-allocated list to store the 'blobs' that were<br>
	 *                        provided during the attach of the triggered entities.<br>
	 * @param[in]  nxs        The size of the pre-allocated blobs list.<br>
	 * @param[in]  abstimeout Absolute timeout<br>
	 * @returns  >0 - Success (number of entities triggered).<br>
	 * @returns   0 - Time out (no entities were triggered).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The given waitset is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The waitset has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_waitset_wait_until(dds_entity_t, dds_attach_t*, size_t, dds_time_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1356</i>
	 */
	public static native DdscLibrary.dds_return_t dds_waitset_wait_until(DdscLibrary.dds_entity_t waitset, PointerByReference xs, NativeSize nxs, DdscLibrary.dds_time_t abstimeout);
	/**
	 * @brief Access and read the collection of data values (of same type) and sample info from the<br>
	 *        data reader, readcondition or querycondition.<br>
	 * Return value provides information about number of samples read, which will<br>
	 * be <= maxs. Based on the count, the buffer will contain data to be read only<br>
	 * when valid_data bit in sample info structure is set.<br>
	 * The buffer required for data values, could be allocated explicitly or can<br>
	 * use the memory from data reader to prevent copy. In the latter case, buffer and<br>
	 * sample_info should be returned back, once it is no longer using the Data.<br>
	 * Data values once read will remain in the buffer with the sample_state set to READ<br>
	 * and view_state set to NOT_NEW.<br>
	 * @param[in]  reader_or_condition Reader, readcondition or querycondition entity<br>
	 * @param[out] buf An array of pointers to samples into which data is read (pointers can be NULL)<br>
	 * @param[out] si Pointer to an array of \ref dds_sample_info_t returned for each data value<br>
	 * @param[in]  bufsz The size of buffer provided<br>
	 * @param[in]  maxs Maximum number of samples to read<br>
	 * @returns >=0 - Success (number of samples read).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  One of the given arguments is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_read(dds_entity_t, void**, dds_sample_info_t*, size_t, uint32_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1385</i>
	 */
	public static native DdscLibrary.dds_return_t dds_read(DdscLibrary.dds_entity_t reader_or_condition, PointerByReference buf, dds_sample_info si, NativeSize bufsz, int maxs);
